test/errors/extern1.ls

#OUTPUT
#Syntax Error: Expected "func" keyword.
# -> [10] extern printf(s:str, ...)
#
#END

#RET 1

extern printf(s:str, ...)

func main -> int
begin
    return 0
end

